# parsing-engine

./: .gitignore  LICENSE  layout_models.py  pyproject.toml  readme.md  requirements.freeze.txt  requirements.txt  test_layout.py  verify_model.py
config/: runtime_config.json
profiles/test_doc_two/tables/: layout_hooks.py  layout_profiles.py
scripts/: convert_txt_to_coco_json.py  error_message.md  parsing_layout_lables.md  pdf_to_images_sydney_notes.py  run_inference_batch_detectron2.py  run_inference_detectron2.py  train_layout_detectron2.py  train_layout_model_sydney.py
scripts/coco_output/: annotations.json
scripts/model_output/: events.out.tfevents.1747545951.Joes-MacBook-Pro.local.16885.0  events.out.tfevents.1747546155.Joes-MacBook-Pro.local.17021.0  events.out.tfevents.1747550914.Joes-MacBook-Pro.local.20350.0  events.out.tfevents.1747554750.Joes-MacBook-Pro.local.23211.0  metrics.json
