


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parsing_engine"
version = "0.1.0"
description = "Modular document layout and OCR pipeline"
authors = [{ name = "Joe Dutson" }]
dependencies = []



[tool.setuptools.packages.find]
where = ["."]
